--- a/index.html
+++ b/index.html
@@ -27,14 +27,11 @@
             </div>
 
             <form id="submit-form">
-                <input placeholder="Distance in km" type="text" name="distance">
-                <span class="asterisks">*</span>
+                <input placeholder="Distance in km *" type="text" name="distance">
 
-                <input placeholder="Fuel cost per 100km/h" type="text" name="cost">
-                <span class="asterisks">*</span>
+                <input placeholder="Fuel cost per 100km/h *" type="text" name="cost">
 
-                <input placeholder="Fuel price per liter" type="text" name="pricePerLiter">
-                <span class="asterisks">*</span>
+                <input placeholder="Fuel price per liter *" type="text" name="pricePerLiter">
 
                 <input placeholder="Passengers count" type="text" name="peopleCount">
                 <div id="notification"></div>
