--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <form id="submit-form">
                 <input placeholder="Distance in km *" type="text" name="distance">
 
-                <input placeholder="Fuel cost per 100km *" type="text" name="cost">
+                <input placeholder="Fuel cost for 100km *" type="text" name="cost">
 
                 <input placeholder="Fuel price per liter *" type="text" name="pricePerLiter">
 
